--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
     "next": "14.2.15",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-speech-to-text": "^0.8.0",
     "react-icons": "^5.4.0",
     "react-webcam": "^7.2.0",
+    "sass": "^1.89.0",
+    "scss": "^0.2.4",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three.js": "^0.77.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
